[gd_scene load_steps=8 format=2]

[ext_resource path="res://Nodes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Main/ScreenControl.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Main/progress3.png" type="Texture" id=3]
[ext_resource path="res://Nodes/Main/progress1.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Main/progress2.png" type="Texture" id=5]
[ext_resource path="res://Nodes/Main/background.tres" type="StyleBox" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 496, 271 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_right = 496.0
margin_bottom = 271.0
custom_constants/separation = 32
alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 232.0
margin_bottom = 271.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 32
alignment = 1

[node name="Control2" type="Control" parent="Control/MarginContainer/HBoxContainer/VBoxContainer1"]
margin_top = 61.0
margin_right = 200.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 32 )

[node name="DiscoverableButton" type="CheckButton" parent="Control/MarginContainer/HBoxContainer/VBoxContainer1/Control2"]
margin_left = 100.0
margin_right = 176.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer1/Control2"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 40 )
text = "Discoverable"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/MarginContainer/HBoxContainer/VBoxContainer1"]
margin_top = 125.0
margin_right = 200.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer1"]
margin_top = 189.0
margin_right = 200.0
margin_bottom = 209.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 464.0
margin_bottom = 271.0
alignment = 1

[node name="PeerList" type="ItemList" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 233.0
rect_min_size = Vector2( 200, 200 )
custom_styles/cursor = ExtResource( 6 )
custom_styles/bg_focus = ExtResource( 6 )
custom_styles/cursor_unfocused = ExtResource( 6 )
custom_styles/bg = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 237.0
margin_right = 200.0
margin_bottom = 237.0

[node name="ProgressIndicator" type="AnimatedSprite" parent="Control/MarginContainer/HBoxContainer/VBoxContainer2/CenterContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.345098 )
position = Vector2( 100, 16 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
frame = 1
speed_scale = 0.3
playing = true
[connection signal="toggled" from="Control/MarginContainer/HBoxContainer/VBoxContainer1/Control2/DiscoverableButton" to="." method="_on_DiscoverableButton_toggled"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer1/QuitButton" to="." method="_on_QuitButton_pressed"]
